# SlashGaming-Diablo-II-API-1998

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SGD2MAPI98.dsw  SGD2MAPIc.dsw
SGD2MAPIc/: CMakeLists.txt  LICENSE.md  README.md  SGD2MAPIc.dsp
SGD2MAPIc/include/: d2api_version.h  dllexport_define.inc  dllexport_undefine.inc  sgd2mapi.h  sgd2mapi98.h
SGD2MAPIc/include/c/: default_game_library.h  file.h  game_address.h  game_branch_type.h  game_constant.h  game_executable.h  game_function.h  game_patch.h  game_struct.h  game_version.h
SGD2MAPIc/include/c/file/: file_pe_signature.h  file_version_info.h  fixed_file_version.h
SGD2MAPIc/include/c/game_constant/: d2_client_game_type.h  d2_difficulty_level.h  d2_draw_effect.h  d2_screen_open_mode.h  d2_text_color.h  d2_text_font.h  d2_video_mode.h
SGD2MAPIc/include/c/game_function/: bnclient_function.h  d2cmp_function.h  d2common_function.h  d2direct3d_function.h  d2game_function.h  d2gdi_function.h  d2gfx_function.h  d2glide_function.h  d2lang_function.h  d2launch_function.h  d2mcpclient_function.h  d2multi_function.h  d2net_function.h  d2win_function.h  fog_function.h  storm_function.h
SGD2MAPIc/include/c/game_struct/: d2_belt_record.h  d2_cel.h  d2_cel_context.h  d2_cel_file.h  d2_equipment_layout.h  d2_grid_layout.h  d2_inventory_record.h  d2_mpq_archive.h  d2_mpq_archive_handle.h  d2_positional_rectangle.h  d2_unicode_char.h
SGD2MAPIc/include/c/game_variable/: d2client_variable.h  d2cmp_variable.h  d2common_variable.h  d2ddraw_variable.h  d2direct3d_variable.h  d2game_variable.h  d2gdi_variable.h  d2gfx_variable.h  d2glide_variable.h  d2lang_variable.h  d2multi_variable.h  d2net_variable.h  d2sound_variable.h  d2win_variable.h  fog_variable.h  storm_variable.h
SGD2MAPIc/include/c/helper/: d2_determine_video_mode.h
SGD2MAPIc/include/sgd2mapi98/: default_game_library.h  file.h  game_address.h  game_bool.h  game_branch_type.h  game_constant.h  game_executable.h  game_function.h  game_patch.h  game_struct.h  game_undefined.h  game_variable.h  game_version.h  helper.h
SGD2MAPIc/include/sgd2mapi98/file/: file_pe_signature.h  file_version_info.h  fixed_file_version.h
SGD2MAPIc/include/sgd2mapi98/game_constant/: d2_client_game_type.h  d2_difficulty_level.h  d2_draw_effect.h  d2_screen_open_mode.h  d2_text_color.h  d2_text_font.h  d2_video_mode.h
SGD2MAPIc/include/sgd2mapi98/game_function/: bnclient_function.h  d2client_function.h  d2cmp_function.h  d2common_function.h  d2ddraw_function.h  d2direct3d_function.h  d2game_function.h  d2gdi_function.h  d2gfx_function.h  d2glide_function.h  d2lang_function.h  d2launch_function.h  d2mcpclient_function.h  d2multi_function.h  d2net_function.h  d2sound_function.h  d2win_function.h  fog_function.h  storm_function.h
SGD2MAPIc/include/sgd2mapi98/game_struct/: d2_belt_record.h  d2_cel.h  d2_cel_context.h  d2_cel_file.h  d2_equipment_layout.h  d2_grid_layout.h  d2_inventory_record.h  d2_mpq_archive.h  d2_mpq_archive_handle.h  d2_positional_rectangle.h
SGD2MAPIc/include/sgd2mapi98/game_variable/: bnclient_variable.h  d2client_variable.h  d2cmp_variable.h  d2common_variable.h  d2ddraw_variable.h  d2direct3d_variable.h  d2game_variable.h  d2gdi_variable.h  d2gfx_variable.h  d2glide_variable.h  d2lang_variable.h  d2launch_variable.h  d2mcpclient_variable.h  d2multi_variable.h  d2net_variable.h  d2sound_variable.h  d2win_variable.h  fog_variable.h  storm_variable.h
SGD2MAPIc/include/sgd2mapi98/helper/: d2_determine_video_mode.h
SGD2MAPIc/src/: dll_main.c
SGD2MAPIc/src/c/: default_game_library.c  game_address.c  game_executable.c  game_patch.c  game_version.c
SGD2MAPIc/src/c/backend/: architecture_opcode.c  architecture_opcode.h  game_address_table.c  game_address_table.h  game_library.cpp  game_library.h
SGD2MAPIc/src/c/file/: file_pe_signature.c  file_version_info.c  fixed_file_version.c
SGD2MAPIc/src/c/game_constant/: d2_client_game_type.c  d2_difficulty_level.c  d2_draw_effect.c  d2_screen_open_mode.c  d2_text_color.c  d2_text_font.c  d2_video_mode.c
SGD2MAPIc/src/c/game_struct/: d2_belt_record.c  d2_cel.c  d2_cel_context.c  d2_cel_file.c  d2_equipment_layout.c  d2_grid_layout.c  d2_inventory_record.c  d2_mpq_archive.c  d2_mpq_archive_handle.c  d2_positional_rectangle.c  d2_unicode_char.c
SGD2MAPIc/src/c/helper/: d2_determine_video_mode.c
SGD2MAPIc/src/sgd2mapi98/: default_game_library.c  game_address.c  game_executable.c  game_patch.c  game_version.c
SGD2MAPIc/src/sgd2mapi98/backend/: architecture_opcode.c  architecture_opcode.h  game_address_table.c  game_address_table.h  game_library.cpp  game_library.h
SGD2MAPIcpp98/: CMakeLists.txt  LICENSE.md  README.md  SGD2MAPIcpp98.dsp
SGD2MAPIcpp98/include/: dllexport_define.inc  dllexport_undefine.inc  sgd2mapi98.hpp
SGD2MAPIcpp98/include/sgd2mapi98/: default_game_library.hpp  file.hpp  game_address.hpp  game_bool.hpp  game_branch_type.hpp  game_constant.hpp  game_executable.hpp  game_function.hpp  game_patch.hpp  game_struct.hpp  game_undefined.hpp  game_variable.hpp  game_version.hpp  helper.hpp
SGD2MAPIcpp98/src/: dll_main.cpp
SGD2MAPIcpp98/src/sgd2mapi98/: default_game_library.cpp  game_address.cpp  game_executable.cpp  game_patch.cpp  game_version.cpp
SGD2MAPIcxx98/: CMakeLists.txt  SGD2MAPIcxx98.dsp
SGD2MAPIcxx98/include/: dllexport_define.inc  dllexport_undefine.inc  sgd2mapi.hpp  sgd2mapi98.hpp
SGD2MAPIcxx98/include/cxx98/: default_game_library.hpp  file.hpp  game_address.hpp  game_bool.hpp  game_branch_type.hpp  game_constant.hpp  game_executable.hpp  game_function.hpp  game_patch.hpp  game_struct.hpp  game_undefined.hpp  game_variable.hpp  game_version.hpp  helper.hpp
SGD2MAPIcxx98/include/sgd2mapi98/: game_address.hpp  game_bool.hpp  game_patch.hpp  game_undefined.hpp
SGD2MAPIcxx98/src/: dll_main.cpp
SGD2MAPIcxx98/src/cxx98/: default_game_library.cpp  game_address.cpp  game_branch_type.cpp  game_executable.cpp  game_patch.cpp  game_version.cpp
SGD2MAPIcxx98/src/sgd2mapi98/: default_game_library.cpp  game_address.cpp  game_executable.cpp  game_version.cpp
(+1391 files in other folders)
